custom logging unit tests